--- a/Views/Owner/Profile.cshtml
+++ b/Views/Owner/Profile.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Owner Profile";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
@@ -40,7 +39,7 @@
 
                 <!-- Buton -->
                 <button type="button" class="btn btn-outline-success btn-block" id="uploadButton" hidden>
-                    <i class="fas fa-upload"></i>  Upload New Photo
+                    <i class="fas fa-upload"></i> Upload New Photo
                 </button>
             </div>
 
@@ -68,11 +67,13 @@
                     </div>
 
                     <div class="form-group">
-                        <label>Address </label><div class="input-group">
+                        <label>Address </label>
+                        <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><i class="fas fa-map-marked-alt"></i></span>
                             </div>
-                            <textarea class="form-control" rows="3" readonly="" id="ownerAddress" style="height: 107px;">@Model.Address</textarea>
+                            <textarea class="form-control" rows="3" readonly="" id="ownerAddress"
+                                style="height: 107px;">@Model.Address</textarea>
                         </div>
 
                     </div>
@@ -81,7 +82,8 @@
                     <!-- /.form-group -->
                 </div>
                 <!-- /.form-group -->
-            </div><div class="col-md-5">
+            </div>
+            <div class="col-md-5">
                 <div class="form-group">
                     <label>About</label>
                     <div class="input-group">
@@ -120,17 +122,20 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-flag"></i></span>
                         </div>
-                        <select class="form-control select2bs4 select2-hidden-accessible" style="width: 80%;" id="ownerCountry" disabled>
+                        <select class="form-control select2bs4 select2-hidden-accessible" style="width: 80%;"
+                            id="ownerCountry" disabled>
                             @using Seawise.Data
                             @foreach (var country in Countries.countries)
                             {
                                 if (country.CountryCode == Model.CountryCode)
                                 {
-                                    <option selected="selected" value="@country.CountryCode" data-image="/images/flags/@(country.CountryCode).svg">@country.CountryName</option>
+                                    <option selected="selected" value="@country.CountryCode"
+                                        data-image="/images/flags/@(country.CountryCode).svg">@country.CountryName</option>
                                 }
                                 else
                                 {
-                                    <option value="@country.CountryCode" data-image="/images/flags/@(country.CountryCode).svg">@country.CountryName</option>
+                                    <option value="@country.CountryCode" data-image="/images/flags/@(country.CountryCode).svg">
+                                        @country.CountryName</option>
                                 }
                             }
                         </select>
@@ -168,13 +173,18 @@
             <button type="button" class="btn btn-tool" data-card-widget="remove">
                 <i class="fas fa-times"></i>
             </button>
-        </div><ul class="nav nav-tabs" id="custom-tabs-three-tab" role="tablist">
+        </div>
+        <ul class="nav nav-tabs" id="custom-tabs-three-tab" role="tablist">
 
             <li class="nav-item">
-                <a class="nav-link active" id="custom-tabs-three-home-tab" data-toggle="pill" href="#custom-tabs-three-home" role="tab" aria-controls="custom-tabs-three-home" aria-selected="true"><i class="fas fa-ship"></i> &nbsp; Ship List</a>
+                <a class="nav-link active" id="custom-tabs-three-home-tab" data-toggle="pill"
+                    href="#custom-tabs-three-home" role="tab" aria-controls="custom-tabs-three-home"
+                    aria-selected="true"><i class="fas fa-ship"></i> &nbsp; Ship List</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="custom-tabs-three-profile-tab" data-toggle="pill" href="#custom-tabs-three-profile" role="tab" aria-controls="custom-tabs-three-profile" aria-selected="false"><i class="fas fa-anchor"></i> &nbsp; Add Ship</a>
+                <a class="nav-link" id="custom-tabs-three-profile-tab" data-toggle="pill"
+                    href="#custom-tabs-three-profile" role="tab" aria-controls="custom-tabs-three-profile"
+                    aria-selected="false"><i class="fas fa-anchor"></i> &nbsp; Add Ship</a>
             </li>
 
 
@@ -186,16 +196,21 @@
     <!-- /.card-header -->
     <div class="card-body" style="display: block;">
         <div class="tab-content" id="custom-tabs-three-tabContent">
-            <div class="tab-pane fade active show" id="custom-tabs-three-home" role="tabpanel" aria-labelledby="custom-tabs-three-home-tab">
+            <div class="tab-pane fade active show" id="custom-tabs-three-home" role="tabpanel"
+                aria-labelledby="custom-tabs-three-home-tab">
                 <div class="row">
                     @foreach (var ship in Model.Ships)
                     {
                         <div class="col-md-3">
-                            <a asp-controller="Ship" asp-action="Details" asp-route-shipId="@ship.ShipId" class="card card-outline card-primary btn-block shadow" style="padding:0; text-align:left; background-color:transparent;">
-                                <img alt="" style="height: 180px; width: 100%; display: block;" src="@ship.PhotoUrl" data-holder-rendered="true">
+                            <a asp-controller="Ship" asp-action="Details" asp-route-shipId="@ship.ShipId"
+                                class="card card-outline card-primary btn-block shadow"
+                                style="padding:0; text-align:left; background-color:transparent;">
+                                <img alt="" style="height: 180px; width: 100%; display: block;" src="@ship.PhotoUrl"
+                                    data-holder-rendered="true">
                                 <div class="card-body">
                                     <dl>
-                                        <dt>@ship.ShipName &nbsp; <img src="~/images/flags/@($"{ship.CountryCode}.svg")" style="height: 15px;" class="elevation-2" alt="Flag"> </dt>
+                                        <dt>@ship.ShipName &nbsp; <img src="~/images/flags/@($"{ship.CountryCode}.svg")"
+                                                style="height: 15px;" class="elevation-2" alt="Flag"> </dt>
                                         <dd>Owner: @ship.ShipOwner.Name</dd>
                                     </dl>
                                 </div>
@@ -204,10 +219,13 @@
                     }
                 </div>
             </div>
-            <div class="tab-pane fade" id="custom-tabs-three-profile" role="tabpanel" aria-labelledby="custom-tabs-three-profile-tab">
+            <div class="tab-pane fade" id="custom-tabs-three-profile" role="tabpanel"
+                aria-labelledby="custom-tabs-three-profile-tab">
                 <div class="row">
                     <div class="col-3 text-center">
-                        <img alt="" id="newShipPhoto" style="height: 180px; width: 100%; display: block;" src="https://images.pexels.com/photos/7321/sea-water-ocean-horizon.jpg?cs=srgb&dl=pexels-splash-of-rain-7321.jpg&fm=jpg" data-holder-rendered="true">
+                        <img alt="" id="newShipPhoto" style="height: 180px; width: 100%; display: block;"
+                            src="https://images.pexels.com/photos/7321/sea-water-ocean-horizon.jpg?cs=srgb&dl=pexels-splash-of-rain-7321.jpg&fm=jpg"
+                            data-holder-rendered="true">
                         <div style="height:24px;"> </div>
 
                         <!-- Fotoğraf yükleme için gizli input -->
@@ -215,7 +233,7 @@
 
                         <!-- Buton -->
                         <button type="button" class="btn btn-outline-success btn-block" id="shipPhotoUploadButton">
-                            <i class="fas fa-upload"></i>  Upload New Photo
+                            <i class="fas fa-upload"></i> Upload New Photo
                         </button>
                     </div>
 
@@ -228,7 +246,7 @@
                                     <span class="input-group-text" style="font-weight: bold">IMO</span>
 
                                 </div>
-                                <input type="text" class="form-control"  id="imonumber" wfd-id="id1">
+                                <input type="text" class="form-control" id="imonumber" wfd-id="id1">
                             </div>
                         </div>
                         <!-- /.form-group -->
@@ -238,11 +256,12 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-ship"></i></span>
                                 </div>
-                                <select class="form-control select2bs4 select2-hidden-accessible" style="width: 80%;" id="shipType">
+                                <select class="form-control select2bs4 select2-hidden-accessible" style="width: 80%;"
+                                    id="shipType">
                                     @using Seawise.Data
                                     @foreach (var type in ShipTypes.shipTypes)
-                                    {                                      
-                                            <option value="@type.ShipTypeId">@type.ShipTypeName</option>
+                                    {
+                                        <option value="@type.ShipTypeId">@type.ShipTypeName</option>
                                     }
                                 </select>
 
@@ -255,11 +274,12 @@
                                 <div class="input-group-prepend" data-target="#launchDate" data-toggle="datetimepicker">
                                     <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                                 </div>
-                                <input type="text" class="form-control datetimepicker-input" data-target="#launchDate" id="launchDateInput">
+                                <input type="text" class="form-control datetimepicker-input" data-target="#launchDate"
+                                    id="launchDateInput">
                             </div>
                         </div>
 
-                     
+
                     </div>
 
                     <div class="col-md-5">
@@ -283,17 +303,22 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-flag"></i></span>
                                 </div>
-                                <select class="form-control select2bs4 select2-hidden-accessible" style="width: 80%;" id="flagState">
+                                <select class="form-control select2bs4 select2-hidden-accessible" style="width: 80%;"
+                                    id="flagState">
                                     @using Seawise.Data
                                     @foreach (var country in Countries.countries)
                                     {
                                         if (country.CountryCode == Model.CountryCode)
                                         {
-                                            <option selected="selected" value="@country.CountryCode" data-image="/images/flags/@(country.CountryCode).svg">@country.CountryName</option>
+                                            <option selected="selected" value="@country.CountryCode"
+                                                data-image="/images/flags/@(country.CountryCode).svg">@country.CountryName
+                                            </option>
                                         }
                                         else
                                         {
-                                            <option value="@country.CountryCode" data-image="/images/flags/@(country.CountryCode).svg">@country.CountryName</option>
+                                            <option value="@country.CountryCode"
+                                                data-image="/images/flags/@(country.CountryCode).svg">@country.CountryName
+                                            </option>
                                         }
                                     }
                                 </select>
@@ -310,8 +335,9 @@
                                         <div class="col-md-6">
                                         </div>
                                         <div class="col-md-6">
-                                            <button type="button" class="btn btn-info btn-block" id="addShipButton"><i class="fas fa-save"></i> Save Ship Information</button>
-                                            
+                                            <button type="button" class="btn btn-info btn-block" id="addShipButton"><i
+                                                    class="fas fa-save"></i> Save Ship Information</button>
+
                                         </div>
 
                                     </div>
@@ -324,9 +350,9 @@
                     <!-- /.col -->
 
                 </div>
-                
+
             </div>
-            
+
         </div>
         <!-- /.row -->
     </div>
@@ -352,10 +378,10 @@
             // Save butonuna tıklandığında
             $('#saveButton').click(function () {
                 $('#ownerName,#ownerPhone,#ownerAddress,#ownerEmail').attr('readonly', true);
-                
+
 
                 var ownerData = {
-                    ShipOwnerId: parseInt('@Model.ShipOwnerId'), 
+                    ShipOwnerId: parseInt('@Model.ShipOwnerId'),
                     Name: $('#ownerName').val(),
                     Email: $('#ownerEmail').val(),
                     Phone: $('#ownerPhone').val(),
@@ -365,15 +391,15 @@
                 };
 
 
-               
+
                 $.ajax({
-                    url: '@Url.Action("UpdateShipOwner", "Owner")', 
+                    url: '@Url.Action("UpdateShipOwner", "Owner")',
                     type: 'POST',
                     contentType: 'application/x-www-form-urlencoded',
                     data: (ownerData),
                     success: function (response) {
                         alert("Data saved!");
-                       
+
                     },
                     error: function (error) {
                         alert('Error saving data!');
@@ -381,7 +407,7 @@
                 });
 
 
-               
+
                 $('#ownerCountry').attr('disabled', true);
                 $('#saveButton,#uploadButton').attr('hidden', true);
                 $('#editButton').removeAttr('hidden');
@@ -390,10 +416,10 @@
 
 
     </script>
-    
+
     <script>
         $(function () {
-            
+
             $('.select2').select2();
 
             $('.select2bs4').select2({
@@ -403,8 +429,8 @@
 
 
         $('#launchDate').datetimepicker({
-            
-            format: 'L' 
+
+            format: 'L'
         });
 
 
@@ -418,7 +444,7 @@
 
             function formatCountry(country) {
                 if (!country.id) {
-                    return country.text; 
+                    return country.text;
                 }
 
                 var countryFlag = $(country.element).data('image');
@@ -483,12 +509,12 @@
 
     <script>
         document.getElementById('uploadButton').addEventListener('click', function () {
-            document.getElementById('fileInput').click();  
+            document.getElementById('fileInput').click();
         });
 
         document.getElementById('fileInput').addEventListener('change', function () {
             const fileInput = document.getElementById('fileInput');
-            const file = fileInput.files[0];  
+            const file = fileInput.files[0];
 
             if (file) {
                 // Dosya geçerliliğini kontrol et
@@ -528,7 +554,7 @@
 
     <script>
         document.getElementById('shipPhotoUploadButton').addEventListener('click', function () {
-            document.getElementById('shipPhotoInput').click();  
+            document.getElementById('shipPhotoInput').click();
         });
 
         document.getElementById('shipPhotoInput').addEventListener('change', function () {
@@ -536,7 +562,7 @@
             const photo = photoInput.files[0];
 
             if (photo) {
-                
+
                 const validImageTypes = ['image/jpeg', 'image/jpg', 'image/png'];
                 if (!validImageTypes.includes(photo.type)) {
                     alert("Please select a photo which has valid extension (JPEG, JPG, PNG).");
@@ -547,7 +573,7 @@
                 photoData.append('file', photo);
                 photoData.append('ownerId', @Model.ShipOwnerId);
 
-                fetch('@Url.Action("UploadPhoto","Ship")', {
+                fetch('@Url.Action("UploadPhoto", "Ship")', {
                     method: 'POST',
                     body: photoData
                 })
@@ -577,7 +603,7 @@
                     Imonumber: $('#imonumber').val(),
                     CountryCode: $('#flagState').val(),
                     ShipTypeId: $('#shipType').val(),
-                    LaunchDate: new Date($('#launchDateInput').val()).toISOString().split('T')[0],
+                    LaunchDate: new Date($('#launchDateInput').val()).toISOString().split('T')[0] ?? null,
                     PhotoUrl: document.getElementById('newShipPhoto').src
                 };
 
@@ -599,4 +625,3 @@
 
 
 }
-
