--- a/Views/Inspection/Details.cshtml
+++ b/Views/Inspection/Details.cshtml
@@ -142,7 +142,7 @@
                             <td>@employee.EmployeePosition.EmployeeDepartment.DepartmentName</td>
                             <td>@employee.EmployeePosition.PositionName</td>
                             <td>
-                                <a href="@Url.Action("Profile", "Employee", new { id = employee.EmployeeId })" class="btn btn-sm btn-primary">
+                                <a href="@Url.Action("Details", "Employee", new { id = employee.EmployeeId })" class="btn btn-sm btn-primary">
                                     <i class="fas fa-user"></i>&nbsp; View Profile
                                 </a>
                             </td>
