--- a/Views/Maintenance/Details.cshtml
+++ b/Views/Maintenance/Details.cshtml
@@ -146,7 +146,7 @@
                             <td>@employee?.EmployeePosition?.EmployeeDepartment?.DepartmentName</td>
                             <td>@employee?.EmployeePosition?.PositionName</td>
                             <td>
-                                <a href="@Url.Action("Profile", "Employee", new { id = employee?.EmployeeId })" class="btn btn-sm btn-primary">
+                                <a href="@Url.Action("Details", "Employee", new { id = employee?.EmployeeId })" class="btn btn-sm btn-primary">
                                     <i class="fas fa-user"></i>&ensp;View Profile
                                 </a>
                             </td>
