--- a/Views/Inspection/Details.cshtml
+++ b/Views/Inspection/Details.cshtml
@@ -106,13 +106,25 @@
 
 
 <!-- Inspection Participants Section -->
-@if (Model?.InspectionParticipants?.Any() ?? false)
-{
+
     <div class="card card-success card-outline mt-4">
-        <div class="card-header">
+    <div class="card-header d-flex align-items-center">
             <h3 class="card-title"><i class="fas fa-users"></i>&nbsp; Inspection Participants</h3>
+
+        <div class="form-group mb-0 ml-auto" style="width: auto;">
+            <div class="row">
+                <div style="width: 200px;">
+                    <button type="button" class="btn btn-outline-success btn-block btn-sm" data-toggle="modal" data-target="#modal-default">
+                        <i class="fas fa-plus"></i>&ensp;Add Participant
+                    </button>
+                </div>
+
+            </div>
+        </div>
         </div>
         <div class="card-body p-0">
+        @if (Model?.InspectionParticipants?.Any() ?? false)
+        {
             <table class="table table-hover table-striped">
                 <thead>
                     <tr>
@@ -145,14 +157,57 @@
                                 <a href="@Url.Action("Details", "Employee", new { employeeId = employee.EmployeeId })" class="btn btn-sm btn-primary">
                                     <i class="fas fa-user"></i>&nbsp; View Profile
                                 </a>
+                                <button class="btn btn-danger btn-sm delete-finding-button"
+                                        data-employee-id="@employee.EmployeeId"
+                                        data-toggle="modal"
+                                        data-target="#deleteParticipantModal">
+                                    <i class="fas fa-trash"></i>
+                                </button>
                             </td>
                         </tr>
                     }
                 </tbody>
             </table>
+            }
         </div>
     </div>
-}
+
+
+<div id="toastsContainerTopRight" class="toasts-top-right fixed"></div>
+<!-- Modal -->
+<div class="modal fade" id="modal-default" aria-hidden="true" style="display: none;">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Add New Participant</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="searchForm">
+                    @Html.AntiForgeryToken()
+                    <div class="form-group">
+                        <div class="input-group input-group-lg">
+                            <input type="search" class="form-control form-control-lg" id="searchInput" placeholder="Type Employee Name" autofocus onkeyup="search()">
+                            <div class="input-group-append">
+                                <button type="button" class="btn btn-lg btn-default" ononclick="search()">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <div style="height: 15px"> </div>
+                <section class="content"><div id="searchResults"></div></section>
+            </div>
+            <div class="modal-footer justify-content-between">
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
 
 <!-- Delete Confirmation Modal -->
 <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
@@ -245,6 +300,27 @@
 </div>
 
 
+<div class="modal fade" id="deleteParticipantModal" tabindex="-1" role="dialog" aria-labelledby="deleteParticipantModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteParticipantModalLabel">Delete Confirmation</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this Participant?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" id="confirmDeleteParticipantButton">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 @section Scripts {     
 
     <script>
@@ -324,7 +400,82 @@
             });
         });
     </script>
+    <script>
+        window.onload = search();
+        function search() {
+            const departmentId = 2;
+            const positionId = 0;
+            const searchText = document.getElementById('searchInput').value;
 
+            // Send AJAX request with departmentId, positionId, and searchText
+            $.ajax({
+                url: '@Url.Action("GetEmployees", "Employee")', // Replace with your actual controller name
+                type: 'POST',
+                data: {
+                    departmentId: departmentId,
+                    positionId: positionId,
+                    searchText: searchText
+                },
+                headers: {
+                    'RequestVerificationToken': $('input[name="__RequestVerificationToken"]').val()
+                },
+                success: function (data) {
+                    // Update the search results div with the returned HTML from the partial view
+                    $('#searchResults').html(data);
+                },
+                error: function () {
+                    console.error('Error performing search');
+                }
+            });
+        }
+    </script>
+
+
+    <script>
+
+        function addParticipant(employeeId) {
+            var participantRecord = {
+                InspectionRecordId: @Model.InspectionRecordId,
+                EmployeeId: employeeId
+            };
+            $.ajax({
+                url: '@Url.Action("AddParticipant", "Inspection")',
+                type: 'POST',
+                contentType: 'application/json',
+                data: JSON.stringify(participantRecord),
+                success: function () { location.reload(); },
+                error: function () { alert('Employee is already a participant!'); }
+            });
+        }
+
+
+          $(document).ready(function () {
+
+               let employeeIdToDelete = null;
+
+            // Delete button'a tıklanınca modal'ı aç ve ilgili Finding ID'sini al
+            $('.delete-finding-button').on('click', function () {
+                employeeIdToDelete = $(this).data('employee-id');
+            });
+
+            $('#confirmDeleteParticipantButton').click(function () {
+
+                var participantRecord = {
+                    InspectionRecordId: @Model.InspectionRecordId,
+                    EmployeeId: employeeIdToDelete
+                };
+                $.ajax({
+                    url: '@Url.Action("RemoveParticipant", "Inspection")',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify(participantRecord),
+                    success: function () { location.reload(); },
+                    error: function () { alert('Employee is already not a participant!'); }
+                });
+            });
+        });
+
+    </script>
 
 }
 
