--- a/Views/Equipment/Details.cshtml
+++ b/Views/Equipment/Details.cshtml
@@ -206,12 +206,23 @@
 </div>
 
 
-@if (Model.MaintenanceRecords.Count() > 0)
-{
+
     <div class="card card-warning card-outline">
-        <div class="card-header">
+    <div class="card-header d-flex align-items-center">
             <h3 class="card-title"><i class="fas fa-wrench"></i> &ensp; Maintenance Records</h3>
+                <div class="form-group mb-0 ml-auto" style="width: auto;">
+                    <div class="row">
+                        <div style="width: 200px;">
+                    <button type="button" class="btn btn-outline-success btn-block btn-sm" data-toggle="modal" data-target="#modal-add-maintenance">
+                                <i class="fas fa-plus"></i>&ensp;Add Maintenance
+                            </button>
+                        </div>
+
+                    </div>
+                </div>
+
             <div class="card-tools">
+                &ensp;
                 <button type="button" class="btn btn-tool" id="togglePlanned">
                     <i class="nav-icon far fa-circle text-warning"></i> Toggle Planned
                 </button>
@@ -221,6 +232,8 @@
             </div>
         </div>
         <div class="card-body p-0">
+        @if (Model.MaintenanceRecords.Count() > 0)
+        {
             <table class="table table-striped projects">
                 <thead>
                     <tr>
@@ -264,11 +277,57 @@
                     }
                 </tbody>
             </table>
+            }
         </div>
     </div>
-}
 
 
+
+<div id="toastsContainerTopRight" class="toasts-top-right fixed"></div>
+<!-- Modal -->
+<div class="modal fade" id="modal-add-maintenance" aria-hidden="true" style="display: none;">
+    <div class="modal-dialog modal-s">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Add New Maintenance</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">              
+                
+              
+
+                <div class="form-group">
+                   
+
+                    <div class="form-group">
+                        <label>Maintenance Date & Time:</label>
+                        <div class="input-group date" id="maintenanceTime" data-target-input="nearest">
+                            
+                            <div class="input-group-prepend" data-target="#maintenanceTime" data-toggle="datetimepicker">
+                                <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                            </div>
+                            <input type="text" class="form-control datetimepicker-input" data-target="#maintenanceTime" id="maintenanceTimeInput" />
+                        </div>
+                    </div>
+
+                </div>
+                
+                <div class="form-group">
+                    <label>Description:</label>
+                    <textarea class="form-control" rows="4" id="maintenanceDesc"></textarea>
+                </div>
+            </div>
+            <div class="modal-footer justify-content-between">
+                <button type="button" id="closeButton" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" id="saveMaintenanceButton" class="btn btn-outline-success">SAVE</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
 
 
 @section Scripts {
@@ -282,6 +341,8 @@
             $('.select2bs4').select2({
                 theme: 'bootstrap4'
             });
+
+            $('#maintenanceTime').datetimepicker({ icons: { time: 'far fa-clock' } });
         });
 
 
@@ -392,7 +453,6 @@
 
         });
 
-
     </script>
 
     <script>
@@ -436,6 +496,32 @@
             }
         });
     </script>
+
+    <script>
+            $('#saveMaintenanceButton').click(function () {               
+
+                var maintenanceData = {
+                    ShipEquipmentId: parseInt('@Model.ShipEquipmentId'),                    
+                    Description: $('#maintenanceDesc').val(),
+        Time: new Date($('#maintenanceTimeInput').val()).toISOString().slice(0, 19) + 'Z'
+                };
+
+
+
+                $.ajax({
+                    url: '@Url.Action("AddMaintenance", "Maintenance")',
+                    type: 'POST',
+                    contentType: 'application/json',
+                data: JSON.stringify(maintenanceData),
+                success: function () { location.reload(); },
+                    error: function (error) {
+                        alert('Error saving data!');
+                    }
+                });
+            });
+     </script>
+
+
 
     <script>
 
