--- a/Views/Employee/AddEmployee.cshtml
+++ b/Views/Employee/AddEmployee.cshtml
@@ -153,7 +153,7 @@
                         <script>
                             $(function () {
                                 $('#employeeHireDate').datetimepicker({
-                                    format: 'DD/MM/YYYY'
+                                    format: 'L'
                                 });
                             });
                         </script>
