--- a/Views/Inspection/Details.cshtml
+++ b/Views/Inspection/Details.cshtml
@@ -14,6 +14,15 @@
 <div class="card card-info card-outline">
     <div class="card-header">
         <h3 class="card-title"><i class="fas fa-search"></i>&nbsp; Inspection Record</h3>
+
+        <div class="card-tools">
+            <button type="button" class="btn btn-tool" id="editButton">
+                <i class="fas fa-edit"></i>&nbsp; Edit
+            </button>
+            <button type="button" class="btn btn-tool" id="saveButton" hidden>
+                <i class="fas fa-save"></i>&nbsp; Save
+            </button>
+        </div>
         
     </div>
 
@@ -42,6 +51,12 @@
                 <div class="form-group">
                     <label>Description:</label>
                     <textarea class="form-control" rows="4" id="inspectionDescription" readonly>@Model.InspectionType.Description</textarea>
+                </div>
+
+                <div class="form-group">
+                    <button type="button" class="btn btn-outline-danger btn-block mt-3" id="deleteInspectionButton" data-toggle="modal" data-target="#deleteInspectionModal" hidden>
+                        <i class="fas fa-trash"></i>&nbsp; Delete Inspection Record
+                    </button>
                 </div>
             </div>
 
@@ -267,6 +282,9 @@
                     <label>Description</label>
                     <textarea class="form-control" id="newFindingDescription" rows="4"></textarea>
                 </div>
+
+               
+                
             </div>
 
             <!-- Modal Footer -->
@@ -321,7 +339,59 @@
 </div>
 
 
-@section Scripts {     
+<div class="modal fade" id="deleteInspectionModal" tabindex="-1" role="dialog" aria-labelledby="deleteInspectionModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteInspectionModalLabel">Delete Confirmation</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this Inspection?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" id="confirmDeleteInspectionButton">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+
+
+    <script>
+        $(document).ready(function () {
+            $('#editButton').click(function () {                
+                $('#saveButton').removeAttr('hidden');
+                $('#deleteInspectionButton').removeAttr('hidden');
+                $('#editButton').attr('hidden', true);
+            });
+
+            $('#saveButton').click(function () {
+                
+            });
+
+            $('#confirmDeleteInspectionButton').click(function () {
+                var inspectionData = {
+                    InspectionRecordId: parseInt("@Model.InspectionRecordId"),
+                    ShipId: parseInt("@Model.ShipId")
+                };
+
+                $.ajax({
+                    url: '@Url.Action("DeleteInspection", "Inspection")',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify(inspectionData),
+                    success: function (response) { window.location.href = response.redirectUrl; },
+                    error: function () { alert('Error deleting record!'); }
+                });
+            });
+        });
+    </script>
+
 
     <script>
         $(document).ready(function () {
