Equipment adding bug fixed

--- a/Views/Equipment/List.cshtml
+++ b/Views/Equipment/List.cshtml
@@ -269,10 +269,12 @@
         });
 
 
-        $('#additionDateInput').datetimepicker({
+        $('#newAdditionDate').datetimepicker({
 
             format: 'L'
         });
+
+
 
 
 
